trying to fix again - stupid iphone viewport crap. not showing up with issue in any browser emulator

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,9 +10,9 @@
 .app-menu {
   position: fixed;
   bottom: 1.2rem;
-  left: 33%;
-  width: 28%;
-  min-width: 9rem;
+  left: 28%;
+  width: 33%;
+  min-width: 10rem;
   background: #2d5b2d;
   height: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.48);
